bk_ida/gobmkida/g0/result_to_string
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/result_to_string/src/engine/printutils.c:876:22: error: use of undeclared identifier 'off_4D6806'
v1 = ( const char *)&off_4D6806; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/result_to_string/src/obj/1/printutils.o] Error 1
